gobmkida/c3/set_strength_data
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/set_strength_data/src/engine/dragon.c:1701:15: error: use of undeclared identifier 'dword_9FB084'
v18 = dragon2[dword_9FB084[v16 / 4]].safety; 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/set_strength_data/src/obj/1/dragon.o] Error 1
